# rand_core_compat

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: lib.rs
src/compat/: mod.rs  v0_10.rs  v0_5.rs  v0_6.rs  v0_9.rs
