[package]
name = "rand_core_compat"
version = "0.1.0"
authors = ["Tobias Bucher <tobiasbucher5991@gmail.com>"]
edition = "2021"
rust-version = "1.63"
description = "A compatibility layer for different versions of rand_core"
repository = "https://github.com/tbu-/rand_core_compat"
license = "MIT OR Apache-2.0"
keywords = ["rand", "random", "compat", "compatibility", "no_std"]
categories = ["no-std"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
rand_core_0_5 = ["dep:rand_core_0_5"]
rand_core_0_6 = ["dep:rand_core_0_6"]
rand_core_0_9 = ["dep:rand_core_0_9"]
rand_core_0_10 = ["dep:rand_core_0_10"]
std = [
    "rand_core_0_5?/std",
    "rand_core_0_6?/std",
    "rand_core_0_9?/std",
]

[dependencies]
rand_core_0_5 = { package = "rand_core", version = "0.5", optional = true, default-features = false }
rand_core_0_6 = { package = "rand_core", version = "0.6", optional = true, default-features = false }
rand_core_0_9 = { package = "rand_core", version = "0.9", optional = true, default-features = false }
rand_core_0_10 = { package = "rand_core", version = "0.10", optional = true, default-features = false }
